--- a/m/ma/mal/malcolmcoles.co.uk.html
+++ b/m/ma/mal/malcolmcoles.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the malcolmcoles.co.uk privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624011204id_/http%3A//www.malcolmcoles.co.uk/blog/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the malcolmcoles.co.uk privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221043354id_/http%3A//www.malcolmcoles.co.uk/blog/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -364,51 +364,51 @@ google_ad_height = 250;
 
 <div id="sidebar-bottom"> 
 <h3>Tag Cloud</h3>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/abce/" class="tag-link-49" title="7 topics" style="font-size: 9.9178082191781pt;">ABCe</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/alfie-patten/" class="tag-link-29" title="7 topics" style="font-size: 9.9178082191781pt;">Alfie Patten</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/autosuggest/" class="tag-link-78" title="10 topics" style="font-size: 11.260273972603pt;">autosuggest</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/bbc/" class="tag-link-73" title="11 topics" style="font-size: 11.643835616438pt;">bbc</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/best-off-2009/" class="tag-link-98" title="12 topics" style="font-size: 11.931506849315pt;">Best of 2009</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/bing/" class="tag-link-44" title="7 topics" style="font-size: 9.9178082191781pt;">bing</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/express/" class="tag-link-33" title="38 topics" style="font-size: 16.534246575342pt;">Express</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/facebook/" class="tag-link-105" title="7 topics" style="font-size: 9.9178082191781pt;">facebook</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/footballer-injunction/" class="tag-link-129" title="5 topics" style="font-size: 8.7671232876712pt;">footballer injunction</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/ft/" class="tag-link-55" title="24 topics" style="font-size: 14.712328767123pt;">FT</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/google/" class="tag-link-10" title="135 topics" style="font-size: 21.712328767123pt;">google</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/google-instant/" class="tag-link-116" title="6 topics" style="font-size: 9.4383561643836pt;">google instant</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/guardian/" class="tag-link-39" title="54 topics" style="font-size: 17.972602739726pt;">Guardian</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/how-to/" class="tag-link-18" title="11 topics" style="font-size: 11.643835616438pt;">How to</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/independent/" class="tag-link-53" title="30 topics" style="font-size: 15.575342465753pt;">Independent</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/abce/" class="tag-link-49" title="7 topics" style="font-size: 9.91780821918pt;">ABCe</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/alfie-patten/" class="tag-link-29" title="7 topics" style="font-size: 9.91780821918pt;">Alfie Patten</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/autosuggest/" class="tag-link-78" title="10 topics" style="font-size: 11.2602739726pt;">autosuggest</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/bbc/" class="tag-link-73" title="11 topics" style="font-size: 11.6438356164pt;">bbc</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/best-off-2009/" class="tag-link-98" title="12 topics" style="font-size: 11.9315068493pt;">Best of 2009</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/bing/" class="tag-link-44" title="7 topics" style="font-size: 9.91780821918pt;">bing</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/express/" class="tag-link-33" title="38 topics" style="font-size: 16.5342465753pt;">Express</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/facebook/" class="tag-link-105" title="7 topics" style="font-size: 9.91780821918pt;">facebook</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/footballer-injunction/" class="tag-link-129" title="5 topics" style="font-size: 8.76712328767pt;">footballer injunction</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/ft/" class="tag-link-55" title="24 topics" style="font-size: 14.7123287671pt;">FT</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/google/" class="tag-link-10" title="135 topics" style="font-size: 21.7123287671pt;">google</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/google-instant/" class="tag-link-116" title="6 topics" style="font-size: 9.43835616438pt;">google instant</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/guardian/" class="tag-link-39" title="54 topics" style="font-size: 17.9726027397pt;">Guardian</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/how-to/" class="tag-link-18" title="11 topics" style="font-size: 11.6438356164pt;">How to</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/independent/" class="tag-link-53" title="30 topics" style="font-size: 15.5753424658pt;">Independent</a>
 <a href="http://www.malcolmcoles.co.uk/blog/tag/itv/" class="tag-link-62" title="4 topics" style="font-size: 8pt;">itv</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/jan-moir/" class="tag-link-84" title="7 topics" style="font-size: 9.9178082191781pt;">jan moir</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/javascript/" class="tag-link-24" title="8 topics" style="font-size: 10.397260273973pt;">javascript</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/links/" class="tag-link-48" title="13 topics" style="font-size: 12.315068493151pt;">links</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/mail/" class="tag-link-51" title="44 topics" style="font-size: 17.109589041096pt;">Mail</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/jan-moir/" class="tag-link-84" title="7 topics" style="font-size: 9.91780821918pt;">jan moir</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/javascript/" class="tag-link-24" title="8 topics" style="font-size: 10.397260274pt;">javascript</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/links/" class="tag-link-48" title="13 topics" style="font-size: 12.3150684932pt;">links</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/mail/" class="tag-link-51" title="44 topics" style="font-size: 17.1095890411pt;">Mail</a>
 <a href="http://www.malcolmcoles.co.uk/blog/tag/malcolm-coles/" class="tag-link-9" title="4 topics" style="font-size: 8pt;">malcolm coles</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/mirror/" class="tag-link-54" title="32 topics" style="font-size: 15.86301369863pt;">Mirror</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/mps-expenses/" class="tag-link-42" title="5 topics" style="font-size: 8.7671232876712pt;">MPs expenses</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/newspaper-paid-links/" class="tag-link-101" title="6 topics" style="font-size: 9.4383561643836pt;">newspaper paid links</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/newspapers-on-twitter/" class="tag-link-103" title="5 topics" style="font-size: 8.7671232876712pt;">newspapers on twitter</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/nofollow/" class="tag-link-77" title="11 topics" style="font-size: 11.643835616438pt;">nofollow</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/paid-links/" class="tag-link-100" title="8 topics" style="font-size: 10.397260273973pt;">paid links</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/paywall/" class="tag-link-94" title="10 topics" style="font-size: 11.260273972603pt;">paywall</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/redesign/" class="tag-link-65" title="7 topics" style="font-size: 9.9178082191781pt;">redesign</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/redirect/" class="tag-link-68" title="5 topics" style="font-size: 8.7671232876712pt;">redirect</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/relaunch/" class="tag-link-64" title="6 topics" style="font-size: 9.4383561643836pt;">relaunch</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/reviews/" class="tag-link-15" title="19 topics" style="font-size: 13.753424657534pt;">reviews</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/mirror/" class="tag-link-54" title="32 topics" style="font-size: 15.8630136986pt;">Mirror</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/mps-expenses/" class="tag-link-42" title="5 topics" style="font-size: 8.76712328767pt;">MPs expenses</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/newspaper-paid-links/" class="tag-link-101" title="6 topics" style="font-size: 9.43835616438pt;">newspaper paid links</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/newspapers-on-twitter/" class="tag-link-103" title="5 topics" style="font-size: 8.76712328767pt;">newspapers on twitter</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/nofollow/" class="tag-link-77" title="11 topics" style="font-size: 11.6438356164pt;">nofollow</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/paid-links/" class="tag-link-100" title="8 topics" style="font-size: 10.397260274pt;">paid links</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/paywall/" class="tag-link-94" title="10 topics" style="font-size: 11.2602739726pt;">paywall</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/redesign/" class="tag-link-65" title="7 topics" style="font-size: 9.91780821918pt;">redesign</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/redirect/" class="tag-link-68" title="5 topics" style="font-size: 8.76712328767pt;">redirect</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/relaunch/" class="tag-link-64" title="6 topics" style="font-size: 9.43835616438pt;">relaunch</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/reviews/" class="tag-link-15" title="19 topics" style="font-size: 13.7534246575pt;">reviews</a>
 <a href="http://www.malcolmcoles.co.uk/blog/tag/seo/" class="tag-link-11" title="142 topics" style="font-size: 22pt;">seo</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/sidewiki/" class="tag-link-79" title="5 topics" style="font-size: 8.7671232876712pt;">Sidewiki</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/spelling/" class="tag-link-102" title="7 topics" style="font-size: 9.9178082191781pt;">spelling</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/sun/" class="tag-link-50" title="41 topics" style="font-size: 16.821917808219pt;">Sun</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/superinjunction/" class="tag-link-122" title="13 topics" style="font-size: 12.315068493151pt;">superinjunction</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/super-injunction-names/" class="tag-link-127" title="8 topics" style="font-size: 10.397260273973pt;">Super injunction names</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/telegraph/" class="tag-link-32" title="41 topics" style="font-size: 16.821917808219pt;">Telegraph</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/times/" class="tag-link-52" title="45 topics" style="font-size: 17.205479452055pt;">Times</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/times-paywall/" class="tag-link-112" title="8 topics" style="font-size: 10.397260273973pt;">times paywall</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/twitter-statistics/" class="tag-link-38" title="19 topics" style="font-size: 13.753424657534pt;">twitter statistics</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/twitter-super-injunction/" class="tag-link-126" title="8 topics" style="font-size: 10.397260273973pt;">Twitter super injunction</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/usability/" class="tag-link-31" title="17 topics" style="font-size: 13.369863013699pt;">usability</a>
-<a href="http://www.malcolmcoles.co.uk/blog/tag/wordpress/" class="tag-link-17" title="9 topics" style="font-size: 10.876712328767pt;">Wordpress</a>		
+<a href="http://www.malcolmcoles.co.uk/blog/tag/sidewiki/" class="tag-link-79" title="5 topics" style="font-size: 8.76712328767pt;">Sidewiki</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/spelling/" class="tag-link-102" title="7 topics" style="font-size: 9.91780821918pt;">spelling</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/sun/" class="tag-link-50" title="41 topics" style="font-size: 16.8219178082pt;">Sun</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/superinjunction/" class="tag-link-122" title="13 topics" style="font-size: 12.3150684932pt;">superinjunction</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/super-injunction-names/" class="tag-link-127" title="8 topics" style="font-size: 10.397260274pt;">Super injunction names</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/telegraph/" class="tag-link-32" title="41 topics" style="font-size: 16.8219178082pt;">Telegraph</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/times/" class="tag-link-52" title="45 topics" style="font-size: 17.2054794521pt;">Times</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/times-paywall/" class="tag-link-112" title="8 topics" style="font-size: 10.397260274pt;">times paywall</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/twitter-statistics/" class="tag-link-38" title="19 topics" style="font-size: 13.7534246575pt;">twitter statistics</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/twitter-super-injunction/" class="tag-link-126" title="8 topics" style="font-size: 10.397260274pt;">Twitter super injunction</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/usability/" class="tag-link-31" title="17 topics" style="font-size: 13.3698630137pt;">usability</a>
+<a href="http://www.malcolmcoles.co.uk/blog/tag/wordpress/" class="tag-link-17" title="9 topics" style="font-size: 10.8767123288pt;">Wordpress</a>		
  </div>   
 
 
@@ -440,7 +440,7 @@ google_ad_height = 250;
  		
 <h3>Most Popular</h3>
 <ul>
-   <li><a href="http://www.malcolmcoles.co.uk/blog/pippa-middleton-underwear-pictures-google-updates-autosuggests2/">Pippa Middleton underwear pictures: Google updates its autosuggester</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/daily-mail-guuilt/">Hugely embarrassing: Daily Mail jumps gun on “Amanda Knox guilty” story</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/btconnect-pop3-smtp-email-settings-setup-apple-macs/">BTconnect email: pop3 and smtp settings and setup for Mail on an Apple Mac</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/why-you-shouldnt-use-googles-keyword-tool-for-seo/">Why you shouldn't use Google's keyword tool for SEO</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/super-injunction-names/">Super injunction names: 6 national newspaper stories that flouted the injunction to reveal all</a></li></ul>
+   <li><a href="http://www.malcolmcoles.co.uk/blog/pippa-middleton-underwear-pictures-google-updates-autosuggests2/">Pippa Middleton underwear pictures: Google updates its autosuggester</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/btconnect-pop3-smtp-email-settings-setup-apple-macs/">BTconnect email: pop3 and smtp settings and setup for Mail on an Apple Mac</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/daily-mail-guuilt/">Hugely embarrassing: Daily Mail jumps gun on “Amanda Knox guilty” story</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/why-you-shouldnt-use-googles-keyword-tool-for-seo/">Why you shouldn't use Google's keyword tool for SEO</a></li><li><a href="http://www.malcolmcoles.co.uk/blog/super-injunction-names/">Super injunction names: 6 national newspaper stories that flouted the injunction to reveal all</a></li></ul>
 </div>
 </div>
 
@@ -451,7 +451,7 @@ jQuery(function() {
 	jQuery.post("index.php",{ak_action:"api_record_view", ids: AKPC_IDS, type:"page"}, false, "json");
 });
 </script>
-	<script src="http://stats.wordpress.com/e-201326.js" type="text/javascript"></script>
+	<script src="http://stats.wordpress.com/e-201351.js" type="text/javascript"></script>
 <script type="text/javascript">
 st_go({blog:'5709717',v:'ext',post:'3735'});
 var load_cmc = function(){linktracker_init(5709717,3735,2);};
@@ -460,7 +460,7 @@ else load_cmc();
 </script>
   <a href="http://www.malcolmcoles.co.uk/blog/wp-login.php">Log in</a> | <a href="http://www.malcolmcoles.co.uk/blog/feed/">Entries (RSS)</a> | <a href="http://www.malcolmcoles.co.uk/blog/comments/feed/">Comments (RSS)</a> | <a href="http://www.malcolmcoles.co.uk/blog/privacy/">Privacy</a> | <a href="http://colorlabsproject.com/themes/arthemia-premium/" target="_blank">Arthemia Premium</a> theme by <a href="http://colorlabsproject.com" target="_blank">Colorlabs Project</a>
 
-<!-- 72 queries. 0.371 seconds. -->
+<!-- 72 queries. 0.143 seconds. -->
 
 </div>
 <script type="text/javascript" src="http://apis.google.com/js/plusone.js">
