--- a/b/be/bea/beautyjoint.com.html
+++ b/b/be/bea/beautyjoint.com.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the beautyjoint.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620014547id_/http%3A//www.beautyjoint.com/index.php%3Froute%3Dinformation/information%26information_id%3D2) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the beautyjoint.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221211143id_/http%3A//beautyjoint.com/index.php%3Froute%3Dinformation/information%26information_id%3D2) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en" xml:lang="en"><head>
 <title>Privacy Policy</title>
 <meta name="google-site-verification" content="cJBMWjMuZCNTNO5gomgdilWfmA0DGLHOoYeet5V7sgU">
 <base href="http://beautyjoint.com/">
-<link rel="stylesheet" type="text/css" href="includes/addons/customer_credit/css/customers_credits.css">
+<link rel="stylesheet" type="text/css" href="includes/addons/customer_credit/css/customers_credits.css?t=1376513616">
 <link href="http://beautyjoint.com/image/data/icon.png" rel="icon">
-<link rel="stylesheet" type="text/css" href="catalog/view/theme/default/stylesheet/stylesheet.css">
+<link rel="stylesheet" type="text/css" href="catalog/view/theme/default/stylesheet/stylesheet.css?t=1380869511">
 <!--[if lt IE 7]>
 <script type="text/javascript" src="catalog/view/javascript/DD_belatedPNG_0.0.8a-min.js"></script>
 <script>
@@ -17,11 +17,11 @@ DD_belatedPNG.fix('img, #header .div3 a, #content .left, #content .right, .box .
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js" type="text/javascript"></script>
 <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/ui-lightness/jquery-ui.css" type="text/css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="catalog/view/theme/default/stylesheet/jquery-ui/jquery-ui-1.10.0.custom.css">
+<link rel="stylesheet" type="text/css" href="catalog/view/theme/default/stylesheet/jquery-ui/jquery-ui-1.10.0.custom.css?t=1376512771">
 <script src="catalog/view/javascript/jquery/jqzoom/jquery.jqzoom-core.js" type="text/javascript"></script>
-<link rel="stylesheet" href="catalog/view/javascript/jquery/jqzoom/jquery.jqzoom.css" type="text/css">
+<link rel="stylesheet" href="catalog/view/javascript/jquery/jqzoom/jquery.jqzoom.css?t=1376520918" type="text/css">
 <script type="text/javascript" src="catalog/view/javascript/jquery/thickbox/thickbox-compressed.js"></script>
-<link rel="stylesheet" type="text/css" href="catalog/view/javascript/jquery/thickbox/thickbox.css">
+<link rel="stylesheet" type="text/css" href="catalog/view/javascript/jquery/thickbox/thickbox.css?t=1376512771">
 <script type="text/javascript" src="catalog/view/javascript/jquery/tab.js"></script>
 <script type="text/javascript" src="catalog/view/javascript/jquery/quickview.js"></script>
 </head>
@@ -29,6 +29,7 @@ DD_belatedPNG.fix('img, #header .div3 a, #content .left, #content .right, .box .
 <div id="ajaxLoad"></div>
 <div id="overlayscreen" class="ui-widget-overlay" style="z-index: 1001;"></div>
 <div id="container">
+<div id="notification"></div>
 <div id="header" style="position: relative;">
 	<div class="logo"><a href="http://beautyjoint.com/index.php?route=common/home"><img src="http://beautyjoint.com/image/data/logo.png" title="BeautyJoint.com" alt="BeautyJoint.com"></a></div>
 	<div class="menu">
@@ -76,33 +77,62 @@ DD_belatedPNG.fix('img, #header .div3 a, #content .left, #content .right, .box .
 	
 	<div class="submenu">
 								<a href="/index.php?route=product/category&amp;path=1">&nbsp;&nbsp;&nbsp;&nbsp;EYES</a>
-																																	<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=2">&nbsp;&nbsp;&nbsp;&nbsp;LIPS</a>
+																																							<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=2">&nbsp;&nbsp;&nbsp;&nbsp;LIPS</a>
 																														<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=3">&nbsp;&nbsp;&nbsp;&nbsp;FACE</a>
-																																							<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=4">&nbsp;&nbsp;&nbsp;&nbsp;NAILS</a>
+																																	<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=4">&nbsp;&nbsp;&nbsp;&nbsp;NAILS</a>
 																																	<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=5">&nbsp;&nbsp;&nbsp;&nbsp;BODY</a>
-																								<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=7">&nbsp;&nbsp;&nbsp;&nbsp;TOOL &amp; SET</a>
-																																										<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=142">&nbsp;&nbsp;&nbsp;&nbsp;FASHION</a>
-																					<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=9">&nbsp;&nbsp;&nbsp;&nbsp;SUNGLASSES</a>
-																																										</div>
+																					<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=75">&nbsp;&nbsp;&nbsp;&nbsp;HAIR</a>
+																		<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=7">&nbsp;&nbsp;&nbsp;&nbsp;ACCESSORY</a>
+																																																			<span class="divider">|</span>		<a href="/index.php?route=product/category&amp;path=9">&nbsp;&nbsp;&nbsp;&nbsp;SUNGLASSES</a>
+																																																			</div>
+	<div class="submenuwrapper">
+		<ul id="submenu2">
+		
+			<li><a class="white" href="https://beautyjoint.com/index.php?route=product/product&amp;product_id=2239">Gift Store Credit</a></li>
+			<li><div class="header-separator">&nbsp;</div></li>
+			<li><a class="white">Gift Registry</a>
+				<ul class="drop">
+					<li><a href="https://beautyjoint.com/index.php?route=giftregistry/gift">Create New</a></li>
+					<li><a href="https://beautyjoint.com/index.php?route=giftregistry/list">My Gift Registry</a></li>
+					<li><a href="https://beautyjoint.com/index.php?route=giftregistry/list/search">Gift search</a></li>
+				</ul>
+			</li>
+		</ul>
+	</div>
+	<script type="text/javascript">
+		$(function(){
+			$('ul#submenu2 li').hover(function(){
+				//$('#drop' , this).css('display','block');
+				// $(this).children('ul').delay(20).slideDown(200);
+				$(this).children('ul').delay(20).show().parent().children('a').addClass('black');
+			}, function(){
+				$(this).children('ul').delay(20).hide().parent().children('a').removeClass('black');
+				// $(this).children('ul').delay(20).slideUp(200);
+			});
+		});
+		$('img.close').click(function(){
+			$(this).parent().remove();
+		});
+	</script>
 	<div class="search_bar">
-	<table cellpadding="0" cellspacing="0">
-		<tbody><tr>
-			<td style="width: 100%; height: 50px;">
-								<a href="/index.php?route=account/create"><div style="width: 100%; height: 50px;"></div></a>
-								
-			</td>
-			<td>
-				<table class="search" cellpadding="0" cellspacing="0" border="0" align="right" height="50" bgcolor="#666666">
-					<tbody><tr>
-					<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-										<input type="text" value="Keywords" id="filter_keyword" onclick="this.value = '';" onkeydown="this.style.color = '#000000'" style="color: #999;">
-										</td>
-					<td><a onclick="moduleSearch();"><img src="catalog/view/theme/default/image/layout/search_btn.png" alt="Search"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-					</tr>
-				</tbody></table>
-			</td>
-		</tr>
-	</tbody></table>
+		<table cellpadding="0" cellspacing="0">
+			<tbody><tr>
+				<td style="width: 100%; height: 50px;">
+										<a href="/index.php?route=account/create"><div style="width: 100%; height: 50px;"></div></a>
+										
+				</td>
+				<td>
+					<table class="search" cellpadding="0" cellspacing="0" border="0" align="right" height="50" bgcolor="#666666">
+						<tbody><tr>
+						<td valign="middle">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+												<input type="text" value="Keywords" id="filter_keyword" onclick="this.value = '';" onkeydown="this.style.color = '#000000'" style="color: #999;">
+												</td>
+						<td valign="middle"><a onclick="moduleSearch();"><img src="catalog/view/theme/default/image/layout/search_btn.png" alt="Search"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+						</tr>
+					</tbody></table>
+				</td>
+			</tr>
+		</tbody></table>
 	</div>
 		
 </div>
@@ -147,7 +177,7 @@ $('.switcher').bind('mouseleave', function() {
 //--></script> 
 <div id="column_left">
 				<div id="category" style="margin-bottom:10px;">
-<ul><li style="display:none;"><a href="http://beautyjoint.com/eyes">EYES</a></li><li style="display:none;"><a href="http://beautyjoint.com/lips">LIPS</a></li><li style="display:none;"><a href="http://beautyjoint.com/face">FACE</a></li><li style="display:none;"><a href="http://beautyjoint.com/nails">NAILS</a></li><li style="display:none;"><a href="http://beautyjoint.com/body">BODY</a></li><li style="display:none;"><a href="http://beautyjoint.com/accessories">TOOL &amp; SET</a></li><li style="display:none;"><a href="http://beautyjoint.com/apparel">FASHION</a></li><li style="display:none;"><a href="http://beautyjoint.com/sunglasses">SUNGLASSES</a></li><li style="display:none;"><a href="http://beautyjoint.com/new-items">NEW ITEMS</a></li><li style="display:none;"><a href="http://beautyjoint.com/best-sellers">BEST SELLERS</a></li><li style="display:none;"><a href="http://beautyjoint.com/special">SPECIAL</a></li></ul></div>					<div style="margin-bottom:10px;">
+<ul><li style="display:none;"><a href="http://beautyjoint.com/eyes">EYES</a></li><li style="display:none;"><a href="http://beautyjoint.com/lips">LIPS</a></li><li style="display:none;"><a href="http://beautyjoint.com/face">FACE</a></li><li style="display:none;"><a href="http://beautyjoint.com/nails">NAILS</a></li><li style="display:none;"><a href="http://beautyjoint.com/body">BODY</a></li><li style="display:none;"><a href="http://beautyjoint.com/hair-care">HAIR</a></li><li style="display:none;"><a href="http://beautyjoint.com/accessories">ACCESSORY</a></li><li style="display:none;"><a href="http://beautyjoint.com/sunglasses">SUNGLASSES</a></li><li style="display:none;"><a href="http://beautyjoint.com/new-items">NEW ITEMS</a></li><li style="display:none;"><a href="http://beautyjoint.com/best-sellers">BEST SELLERS</a></li><li style="display:none;"><a href="http://beautyjoint.com/special">SPECIAL</a></li></ul></div>					<div style="margin-bottom:10px;">
 	<div style="color:#AC0701; font:normal 24px Arial, Helvetica, sans-serif;">Brands</div>
 	<select onchange="location = this.value">
 		<option value="0">All Brands</option>
